# devterm-cli

./: README.md  pyproject.toml
devterm_cli/: __init__.py  main.py
